@@ -11857,6 +11857,12 @@ boost/libs/wave/samples/quick_start/quick_start.cpp svneol=native#text/plain
 boost/libs/wave/samples/real_positions/build/Jamfile svneol=native#text/plain
 boost/libs/wave/samples/real_positions/build/Jamfile.v2 svneol=native#text/plain
 boost/libs/wave/samples/real_positions/correct_token_positions.hpp svneol=native#text/plain
+boost/libs/wave/samples/real_positions/instantiate_cpp_exprgrammar.cpp svneol=native#text/plain
+boost/libs/wave/samples/real_positions/instantiate_cpp_grammar.cpp svneol=native#text/plain
+boost/libs/wave/samples/real_positions/instantiate_cpp_literalgrs.cpp svneol=native#text/plain
+boost/libs/wave/samples/real_positions/instantiate_defined_grammar.cpp svneol=native#text/plain
+boost/libs/wave/samples/real_positions/instantiate_re2c_lexer.cpp svneol=native#text/plain
+boost/libs/wave/samples/real_positions/real_position_token.hpp svneol=native#text/plain
 boost/libs/wave/samples/real_positions/real_positions.cpp svneol=native#text/plain
 boost/libs/wave/samples/waveidl/build/Jamfile svneol=native#text/plain
 boost/libs/wave/samples/waveidl/build/Jamfile.v2 svneol=native#text/plain
