@@ -12,6 +12,11 @@ subproject libs/wave/samples/real_positions/build ;
 
 exe real_positions
     : ../real_positions.cpp 
+      ../instantiate_cpp_exprgrammar.cpp 
+      ../instantiate_cpp_grammar.cpp 
+      ../instantiate_cpp_literalgrs.cpp 
+      ../instantiate_defined_grammar.cpp 
+      ../instantiate_re2c_lexer.cpp 
       <lib>../../../build/boost_wave
       <lib>../../../../../libs/filesystem/build/boost_filesystem
     :
