@@ -1,7 +1,7 @@
 /*=============================================================================
     Boost.Wave: A Standard compliant C++ preprocessor library
 
-    Sample showing how to correct the positions inside the retunred tokens in 
+    Sample showing how to correct the positions inside the returned tokens in 
     a way that these appear to be consecutive (ignoring positions from macro 
     definitions).
     
@@ -24,8 +24,8 @@
 
 ///////////////////////////////////////////////////////////////////////////////
 // Include the lexer stuff
-#include <boost/wave/cpplexer/cpp_lex_token.hpp>    // token class
-#include <boost/wave/cpplexer/cpp_lex_iterator.hpp> // lexer class
+#include "real_position_token.hpp"                    // token class
+#include <boost/wave/cpplexer/cpp_lex_iterator.hpp>   // lexer type
 
 #include "correct_token_positions.hpp"
 
@@ -38,8 +38,7 @@
 ///////////////////////////////////////////////////////////////////////////////
 template <typename PositionT>
 inline std::ostream &
-operator<< (std::ostream &stream, 
-    boost::wave::cpplexer::lex_token<PositionT> const &t)
+operator<< (std::ostream &stream, lex_token<PositionT> const &t)
 {
     using namespace std;
     using namespace boost::wave;
@@ -62,14 +61,9 @@ operator<< (std::ostream &stream,
         }
     }
     
-    stream 
-        << ") at " << t.get_position().get_file() << " (" 
-        << setw(3) << right << t.get_position().get_line() << "/" 
-        << setw(2) << right << t.get_position().get_column() 
-        << "): >";
+    stream << "): >";
     
-    typedef typename boost::wave::cpplexer::lex_token<PositionT>::string_type 
-        string_type;
+    typedef typename lex_token<PositionT>::string_type string_type;
         
     string_type const& value = t.get_value();
     for (std::size_t i = 0; i < value.size(); ++i) {
@@ -82,8 +76,16 @@ operator<< (std::ostream &stream,
             break;
         }
     }
-    stream << "<";
-
+    stream << "<" << std::endl;
+    stream << "    at:  " << t.get_position().get_file() << " (" 
+        << setw(3) << right << t.get_position().get_line() << "/" 
+        << setw(2) << right << t.get_position().get_column() 
+        << ")" << std::endl;
+    stream << "    and: " << t.get_corrected_position().get_file() << " (" 
+        << setw(3) << right << t.get_corrected_position().get_line() << "/" 
+        << setw(2) << right << t.get_corrected_position().get_column() 
+        << ")";
+        
     return stream;
 }
 
@@ -112,13 +114,14 @@ boost::wave::util::file_position_type current_position;
         instring = std::string(std::istreambuf_iterator<char>(instream.rdbuf()),
                                 std::istreambuf_iterator<char>());
             
-    //  The template boost::wave::cpplexer::lex_token<> is the token type to be 
+    //  The template real_positions::lex_token<> is the token type to be 
     //  used by the Wave library.
-        typedef boost::wave::cpplexer::lex_token<> token_type;
+        typedef lex_token<> token_type;
     
     //  The template boost::wave::cpplexer::lex_iterator<> is the lexer type to
     //  be used by the Wave library.
-        typedef boost::wave::cpplexer::lex_iterator<token_type> lex_iterator_type;
+        typedef boost::wave::cpplexer::lex_iterator<token_type> 
+            lex_iterator_type;
         
     //  This is the resulting context type to use. The first template parameter
     //  should match the iterator type to be used during construction of the
